# MgmtLit

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: domain-literature-researcher.md  literature-review-planner.md  synthesis-planner.md  synthesis-writer.md
.claude/docs/: ARCHITECTURE.md  conventions.md
.claude/hooks/: bib_validator.py  metadata_cleaner.py  metadata_validator.py  setup-environment.sh  subagent_stop_bib.sh  validate_bib_write.py
.claude/skills/literature-review/: SKILL.md
.claude/skills/management-research/: SKILL.md
.gemini/: GEMINI.md
.gemini/agents/: domain-literature-researcher.md  literature-review-planner.md  synthesis-planner.md  synthesis-writer.md
.openai/: AGENTS.md
.openai/agents/: domain-literature-researcher.md  literature-review-planner.md  synthesis-planner.md  synthesis-writer.md
agentic/: manifest.json
src/mgmtlit/: __init__.py  agent_pack.py  agents.py  cli.py  config.py  domain_profiles.py  llm.py  models.py  net.py  orchestration.py  pipeline.py  postprocess.py  research_tools.py  utils.py
src/mgmtlit/sources/: __init__.py  arxiv.py  base.py  core.py  crossref.py  openalex.py  repec.py  semantic_scholar.py  ssrn.py
tests/: test_agent_pack.py  test_agents_quality.py  test_domain_profiles.py  test_llm.py  test_net.py  test_orchestration.py  test_postprocess.py  test_preferences.py  test_research_tools.py  test_utils.py  test_workflow_utils.py
